# kheremara-breeze

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml  notify.yml
example_extensions/handlers/: defaulthandler.py
images/: breeze.png.kra
old/: endstone_breeze-0.1.8-py2.py3-none-any.whl
src/endstone_breeze/: __init__.py  breeze.py
src/endstone_breeze/resources/: __init__.pyi  types.pyi
src/endstone_breeze/utils/: __init__.py  detox_utils.py  general_utils.py  profanity_utils.py  words.py
