[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "endstone-breeze"
version = "0.1.3"
description = "chat manager with extension support"
authors = [
    { name = "niko-at-chalupa"},
    { name = "Sasha"}
]
dependencies = [
    "alt-profanity-check",
    "numpy"
]

[project.entry-points."endstone"]
breeze = "endstone_breeze:Breeze"

[tool.hatch.build.targets.wheel]
packages = ["src/endstone_breeze"]